fix: empty views on tablet don't block click events anymore

--- a/stylus/components/empty.styl
+++ b/stylus/components/empty.styl
@@ -36,6 +36,7 @@ $empty
         position fixed
         top 0
         left 0
+        pointer-events none
         &:before
             width   7.5rem
             height  6.5625rem
